Bug 430312 - Kio-extras fails to install with MinGW
Summary: Kio-extras fails to install with MinGW
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: SFTP (other bugs)
Version First Reported In: 20.11.80
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-12 17:47 UTC by george fb
Modified: 2023-11-08 09:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description george fb 2020-12-12 17:47:11 UTC
STEPS TO REPRODUCE
1. Setup craft with MinGW
2. Run craft kio-extras

OBSERVED RESULT
/kio-extras-20.12.0/sftp/kio_sftp.cpp:2285:28: error: 'QT_STAT_LNK' was not declared in this scope


SOFTWARE/OS VERSIONS
Windows: 10 Pro
Version: 20H2
OS build: 19042.685
Experience: Windows Feature Experience Pack 120.2212.551.0

Qt Version: 5.15.1

-----------
https://github.com/qt/qtbase/blob/7ee682a1ddc259225618b57ff00f4c36ff5e724c/mkspecs/win32-msvc/qplatformdefs.h#L80

-----------
https://github.com/qt/qtbase/blob/7ee682a1ddc259225618b57ff00f4c36ff5e724c/mkspecs/win32-g++/qplatformdefs.h#L92
Comment 1 Harald Sitter 2021-01-29 09:41:04 UTC
Qt's mingw definitions should also have an else branch -> this is a qt bug
Comment 2 george fb 2021-02-07 09:50:33 UTC
I opened a bug for Qt https://bugreports.qt.io/browse/QTBUG-90978

Would be nice if someone from KDE, that already contributes to Qt, could submit a patch.
Otherwise I'll look into how to do it myself.
Comment 3 Julius Künzel 2023-11-03 17:31:14 UTC
Git commit 288cfaa42ec1838235cd4f31726739891d465e4b by Julius Künzel.
Committed on 03/11/2023 at 18:31.
Pushed by jlskuz into branch 'master'.

Fix build with MinGW

Inspired by https://invent.kde.org/qt/qt/qtbase/-/commit/a1bc2921a44409736a8b8576243a0c9129d7683b (which applies to MSVC only)

See also https://bugreports.qt.io/browse/QTBUG-90978?subTaskView=all

M  +5    -0    sftp/kio_sftp.cpp

https://invent.kde.org/network/kio-extras/-/commit/288cfaa42ec1838235cd4f31726739891d465e4b
Comment 4 Julius Künzel 2023-11-08 09:20:36 UTC
Git commit 1a20f2032c00293f2f566705106a30eea45ba383 by Julius Künzel.
Committed on 08/11/2023 at 10:20.
Pushed by jlskuz into branch 'kf6'.

Fix build with MinGW

Inspired by https://invent.kde.org/qt/qt/qtbase/-/commit/a1bc2921a44409736a8b8576243a0c9129d7683b (which applies to MSVC only)

See also https://bugreports.qt.io/browse/QTBUG-90978?subTaskView=all

M  +5    -0    sftp/kio_sftp.cpp

https://invent.kde.org/network/kio-extras/-/commit/1a20f2032c00293f2f566705106a30eea45ba383
Comment 5 Julius Künzel 2023-11-08 09:22:07 UTC
Git commit 0fcbe181bef6f6ed36dea664918014b6caed9955 by Julius Künzel.
Committed on 08/11/2023 at 10:21.
Pushed by jlskuz into branch 'release/23.08'.

Fix build with MinGW

Inspired by https://invent.kde.org/qt/qt/qtbase/-/commit/a1bc2921a44409736a8b8576243a0c9129d7683b (which applies to MSVC only)

See also https://bugreports.qt.io/browse/QTBUG-90978?subTaskView=all

M  +5    -0    sftp/kio_sftp.cpp

https://invent.kde.org/network/kio-extras/-/commit/0fcbe181bef6f6ed36dea664918014b6caed9955