Fix build with MinGW

BUG: 430312

Inspired by https://invent.kde.org/qt/qt/qtbase/-/commit/a1bc2921a44409736a8b8576243a0c9129d7683b (which applies to MSVC only)

See also https://bugreports.qt.io/browse/QTBUG-90978?subTaskView=all